docs/api/qiskit/0.35/qiskit.primitives.Estimator.mdx
---
title: Estimator (v0.35)
description: API reference for qiskit.primitives.Estimator in qiskit v0.35
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.primitives.Estimator
---

# Estimator

<Class id="qiskit.primitives.Estimator" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.20/qiskit/primitives/estimator.py" signature="Estimator(circuits, observables, parameters=None)" modifiers="class">
  Bases: `qiskit.primitives.base_estimator.BaseEstimator`

  Estimator class

  Creating an instance of an Estimator, or using one in a `with` context opens a session that holds resources until the instance is `close()` ed or the context is exited.

  **Parameters**

  *   **circuits** – quantum circuits that represent quantum states
  *   **observables** – observables
  *   **parameters** – parameters of quantum circuits, specifying the order in which values
  *   **be bound.** (*will*) – Defaults to `[circ.parameters for circ in circuits]` The indexing is such that `parameters[i, j]` is the j-th formal parameter of `circuits[i]`.

  **Raises**

  **QiskitError** – for mismatch of circuits and parameters list.

  ## Methods

  <span id="qiskit-primitives-estimator-close" />

  ### close

  <Function id="qiskit.primitives.Estimator.close" signature="Estimator.close()">
    Close the session and free resources
  </Function>

  ## Attributes

  ### circuits

  <Attribute id="qiskit.primitives.Estimator.circuits">
    Quantum circuits that represents quantum states.

    **Returns**

    quantum circuits
  </Attribute>

  ### observables

  <Attribute id="qiskit.primitives.Estimator.observables">
    Observables to be estimated

    **Returns**

    observables
  </Attribute>

  ### parameters

  <Attribute id="qiskit.primitives.Estimator.parameters">
    Parameters of quantum circuits

    **Returns**

    parameters, where `parameters[i][j]` is the j-th parameter of the i-th circuit.
  </Attribute>
</Class>

