docs/api/qiskit/0.37/qiskit.primitives.Estimator.mdx
---
title: Estimator (v0.37)
description: API reference for qiskit.primitives.Estimator in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.primitives.Estimator
---

# Estimator

<Class id="qiskit.primitives.Estimator" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/primitives/estimator.py" signature="Estimator(circuits: Iterable[QuantumCircuit] | QuantumCircuit, observables: Iterable[SparsePauliOp] | SparsePauliOp, *args, parameters: Iterable[Iterable[Parameter]] | None = None, **kwargs)" modifiers="class">
  Bases: [`qiskit.primitives.base_estimator.BaseEstimator`](qiskit.primitives.BaseEstimator "qiskit.primitives.base_estimator.BaseEstimator")

  Estimator class

  Creating an instance of an Estimator, or using one in a `with` context opens a session that holds resources until the instance is `close()` ed or the context is exited.

  **Parameters**

  *   **circuits** – Quantum circuits that represent quantum states.
  *   **observables** – Observables.
  *   **parameters** – Parameters of quantum circuits, specifying the order in which values will be bound. Defaults to `[circ.parameters for circ in circuits]` The indexing is such that `parameters[i, j]` is the j-th formal parameter of `circuits[i]`.

  **Raises**

  **QiskitError** – For mismatch of circuits and parameters list.

  ## Methods

  <span id="qiskit-primitives-estimator-close" />

  ### close

  <Function id="qiskit.primitives.Estimator.close" signature="Estimator.close()">
    Close the session and free resources
  </Function>

  ## Attributes

  ### circuits

  <Attribute id="qiskit.primitives.Estimator.circuits">
    Quantum circuits that represents quantum states.

    **Returns**

    The quantum circuits.
  </Attribute>

  ### observables

  <Attribute id="qiskit.primitives.Estimator.observables">
    Observables to be estimated.

    **Returns**

    The observables.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.primitives.Estimator.parameters">
    Parameters of the quantum circuits.

    **Returns**

    Parameters, where `parameters[i][j]` is the j-th parameter of the i-th circuit.
  </Attribute>
</Class>

